--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Ravshanbek06/telegram-bot#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "node-telegram-bot-api": "^0.56.0"
   }
 }
